--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "psgc-js",
+  "name": "@aivangogh/ph-address",
   "version": "1.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -10,9 +10,9 @@
     "url": "https://github.com/aivangogh"
   },
   "repository": {
-    "url": "https://github.com/aivangogh/psgc-js"
+    "url": "https://github.com/aivangogh/ph-address"
   },
-  "homepage": "https://github.com/aivangogh/psgc-js",
+  "homepage": "https://github.com/aivangogh/ph-address",
   "license": "MIT",
   "keywords": [
     "philippines",
