--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "tsup": "^8.1.2"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.1.2",
+    "typescript": "^5.2.2"
   },
   "dependencies": {}
 }
