--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,3 +22,5 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: bun run build
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
