--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,17 @@
     "noEmit": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-
-    /* Alias Paths */
     "baseUrl": "./",
     "paths": {
-      "@/*": ["*"]
+      "@/*": [
+        "*"
+      ]
     }
   },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
