--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/aivangogh"
   },
   "repository": {
-    "url": "git@github.com:aivangogh/ph-address.git"
+    "url": "git+ssh://git@github.com/aivangogh/ph-address.git"
   },
   "homepage": "https://github.com/aivangogh/ph-address",
   "license": "MIT",
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "release": "bun run build && changeset publish",
+    "release": "bun run build && changeset publish --access=public",
     "test": "jest"
   },
   "devDependencies": {
