--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aivangogh/ph-address",
-  "version": "1.4.2",
+  "version": "2025.3.1",
   "description": "A collection of philippine geographic data based on PSGC",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -24,7 +24,8 @@
   "scripts": {
     "build": "tsup",
     "release": "bun run build && changeset publish",
-    "test": "jest"
+    "test": "jest",
+    "migrate:psgc": "bun run scripts/migrate-psgc.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
@@ -33,7 +34,8 @@
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "tsup": "^8.1.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "xlsx": "^0.18.5"
   },
   "dependencies": {}
 }
