--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aivangogh/ph-address",
-  "version": "2025.3.9",
+  "version": "2025.3.11",
   "description": "A collection of philippine geographic data based on PSGC",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -48,6 +48,7 @@
     "xlsx": "^0.18.5"
   },
   "dependencies": {
-    "@toon-format/toon": "^1.3.0"
+    "@toon-format/toon": "^1.3.0",
+    "pako": "^2.1.0"
   }
 }
