--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "xlsx": "^0.18.5"
   },
   "dependencies": {
-    "@toon-format/toon": "^1.3.0"
+    "@toon-format/toon": "^1.3.0",
+    "pako": "^2.1.0"
   }
 }
